fix - white margin on safari

--- a/src/scss/_extended.scss
+++ b/src/scss/_extended.scss
@@ -21,7 +21,11 @@
     padding-left: calc(var(--bs-gutter-x, 0.75rem));
   }
 }
-
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
 // ––––––––––––
 
 .campus-gallery {
